--- a/about.html
+++ b/about.html
@@ -43,12 +43,12 @@
         </nav>
       </div>
 
-      <div class="about-page">
+      <div class="container about-page">
       <div class="about-section-header">
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 class="heading-1 wow bounceInRight">About me</h2>
+              <h2 class="main-heading wow bounceInRight">About me</h2>
               <p class="about-para wow bounceInRight">Welcome 😄 My name is Ojas Karmarkar and I stay in Mumbai , India.
 
                 Most people get to know me because of my open source work on flutter projects.
@@ -120,10 +120,10 @@
                                         <div class="col-12 col-md-7">
                                             <h2 class="title-heading">Location Independent Web Designer</h2>
                                             <ul class="skills-list" style="padding-left: 0px;">
-                                              <li><i class="fas fa-check"></i> I Create Things With ❤️</li>
-                                              <li><i class="fas fa-check"></i> Marketing On Playstore 📈</li>
-                                              <li><i class="fas fa-check"></i> Design And Development 🎨</li>
-                                              <li><i class="fas fa-check"></i>Optimized App</li>
+                                              <li><i class="fas fa-check"></i>  I Create Things With ❤️</li>
+                                              <li><i class="fas fa-check"></i>  Marketing On Playstore 📈</li>
+                                              <li><i class="fas fa-check"></i>  Design And Development 🎨</li>
+                                              <li><i class="fas fa-check"></i>  Optimized App</li>
                                             </ul>
                                         </div>
                                         <div class="col-12 col-md-3">
