--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <p class="para-random-section wow rubberBand">Lets talk about your next project , describe your budget and the idea in a few words! </p>
                     </div>
                     <div class="col-12 col-md-6" style="margin-left:4rem;text-align: left;max-width:40%">
-                        <form>
+                        <form action="mailto:ojask2002@gmail.com" method="post" enctype="text/plain">
                             <div class="form-group">
                               <label for="exampleInputEmail1" class="wow rubberBand">Email address</label>
                               <input type="email" class="form-control wow rubberBand" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -211,7 +211,7 @@
                                 <textarea class="form-control wow rubberBand" id="exampleFormControlTextarea1" rows="3"></textarea>
                               </div>
                             
-                              <form action="mailto:ojask2002@gmail.com"><button type="submit" class="btn main-btn btn-primary wow rubberBand">Submit</button></form>
+                            <button type="submit" class="btn main-btn btn-primary wow rubberBand">Submit</button>
                           </form>
                     </div>
                         </div>
@@ -224,10 +224,10 @@
                         <div class="col-12 col-md-7">
                             <h2 class="title-heading">Location Independent App Developer</h2>
                             <ul class="skills-list" style="padding-left: 0px;">
-                                <li><i class="fas fa-check"></i> I Create Things With ❤️</li>
-                                <li><i class="fas fa-check"></i> Marketing On Playstore 📈</li>
-                                <li><i class="fas fa-check"></i> Design And Development 🎨</li>
-                                <li><i class="fas fa-check"></i>Optimized App</li>
+                                <li><i class="fas fa-check"></i>  I Create Things With ❤️</li>
+                                <li><i class="fas fa-check"></i>  Marketing On Playstore 📈</li>
+                                <li><i class="fas fa-check"></i>  Design And Development 🎨</li>
+                                <li><i class="fas fa-check"></i>  Optimized App</li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-3">
