--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ojas's Website</title>
+    <title>Prachet's Website</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
@@ -25,7 +25,7 @@
 
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffff;color:black;">
-          <a class="navbar-brand mr-auto" href="index.html">Ojas Karmarkar</a>
+          <a class="navbar-brand mr-auto" href="index.html">Prachet Shah</a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,11 +49,10 @@
           <div class="row">
             <div class="col">
               <h2 class="main-heading wow bounceInRight">About me</h2>
-              <p class="about-para wow bounceInRight">Welcome 😄 My name is Ojas Karmarkar and I stay in Mumbai , India.
+              <p class="about-para wow bounceInRight">Welcome 😋 My name is Prachet Shah and I stay in Mumbai , India.
 
-                Most people get to know me because of my open source work on flutter projects.
-
-                I hear you asking.</p>
+                Most people get to know me because of my open source work on Python projects and my knowledge of Data Science and Web Dev related topics
+                which I hear you asking.</p>
             </div>
           </div>
         </div>
@@ -63,10 +62,25 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 class="heading-1 wow bounceInRight">App Development</h2>
+              <h2 class="heading-1 wow bounceInRight">Web Development</h2>
               <p class="about-para wow bounceInRight">I like to finish the app in less time , thereby with more productivity! 
 
-               Your startup or buiseness can grow rapidly with the help of neatly designed apps for your clients!</p>
+               Your startup or business can grow rapidly with the help of neatly designed web-apps for your clients!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="about-section-header">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h2 class="heading-1 wow bounceInRight">Data Science</h2>
+              <p class="about-para wow bounceInRight" style="margin-bottom: 15px;">
+                I have worked on a lot of open source datasets and have done many data exploration and analytics projects which 
+                help me filter out complex datasets into simple formats with use of Python and Machine Learning Algorithms for better understanding of data models.
+              </p>
+              <a type="submit" class="about-para btn main-btn btn-primary wow bounceInRight" href="https://github.com/PrachetShah/Data-Science">Check it out!</a>
             </div>
           </div>
         </div>
@@ -77,7 +91,7 @@
           <div class="row">
             <div class="col">
               <h2 class="heading-1 wow bounceInRight">Why did I choose this?</h2>
-              <p class="about-para wow bounceInRight">As an app developer , I would like to develop apps for small startups to make then grow! And what's better than turning your hobby into your profession?!</p>
+              <p class="about-para wow bounceInRight">As an self-taught developer , I would like to develop applications for small startups and some of my friends to make then grow! And what's better than turning your hobby into your profession?!</p>
             </div>
           </div>
         </div>
@@ -118,17 +132,16 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-12 col-md-7">
-                                            <h2 class="title-heading">Location Independent Web Designer</h2>
+                                            <h2 class="title-heading">Location Independent Web Designer, Developer</h2>
                                             <ul class="skills-list" style="padding-left: 0px;">
                                               <li><i class="fas fa-check"></i>  I Create Things With ❤️</li>
-                                              <li><i class="fas fa-check"></i>  Marketing On Playstore 📈</li>
                                               <li><i class="fas fa-check"></i>  Design And Development 🎨</li>
                                               <li><i class="fas fa-check"></i>  Optimized App</li>
                                             </ul>
                                         </div>
                                         <div class="col-12 col-md-3">
                                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
-                                                <li>ojask2002@gmail.com</li>
+                                                <a href="mailto:prachetshah25@gmail.com"><li >prachetshah25@gmail.com</li></a>
                                                 <a href="index.html"><li>Home</li></a>
                                                 <a href="about.html"><li>About Me</li></a>
                                                 <a href=""><li>Privacy Policy</li></a>
@@ -136,9 +149,9 @@
                                         </div>
                                         <div class="col-12 col-md-2">
                                             <div class="social" style="padding-left: 0px;margin-top: 5rem;">
-                                              <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
-                                              <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
-                                              <a href="mailto:ojask2002@gmail.com"><i class="fas fa-envelope"></i></a>
+                                              <a href="https://github.com/PrachetShah" target="_blank"><i class="fab fa-github"></i></a>
+                                              <a href="https://www.instagram.com/prachetshah/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                              <a href="mailto:prachetshah25@gmail.com"><i class="fas fa-envelope"></i></a>
                                             </div>
                                         </div>
                                     </div>
