--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ojas's Website</title>
+    <title>Prachet's Website</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
@@ -25,7 +25,7 @@
 
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffff;color:black;">
-          <a class="navbar-brand mr-auto" href="#">Ojas Karmarkar</a>
+          <a class="navbar-brand mr-auto" href="#">Prachet Shah</a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -47,11 +47,19 @@
             <div class="col">
                 <div class="header">
                     <div class="main-img-illust wow zoomIn">
-                        <img src="img/header-illust.svg" alt="" srcset="" class="illust-main">
+                        <img src="img/programmer.png" alt="" srcset="" class="illust-main">
                     </div>
                     <div class="text-section">
-                        <h1 class="main-heading wow lightSpeedIn">Flutter Developer</h1>
-                        <p class="main-para wow lightSpeedIn">Welcome! My name is Ojas and I am an Flutter Dev , and I have basic experiene in Python , Javascript. I also seem to have a good expereince of HTML , CSS. 🕹 As a location independent Developer, I am working with customers all over the globe. 🌎 </p>
+                        <h1 class="main-heading wow lightSpeedIn">Python, Web Developer</h1>
+                        <p class="main-para wow lightSpeedIn">
+                          Hey, I am Prachet and I am a Developer with expertise in Python Programming Language and its sub-domains 
+                          like Data Science, Web Automation, Web Scraping, GUI, Backend Development with Flask, Django and I also 
+                          seem to have in depth knowledge on Web Development Frameworks and libraries like React, Tailwind, Semantic UI.
+                          I have also worked with C and C++.                          
+                        </p>
+                        <p class="main-para wow lightSpeedIn">
+                          🕹 As a location independent Developer, I am working with customers all over the globe. 🌎 
+                        </p>
                         <form action="about.html"><button class="btn main-btn my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button></form>
                         
                     </div>
