project details updated

--- a/index.html
+++ b/index.html
@@ -67,41 +67,103 @@
             </div>
         </div>
 
-   <div class="skills-heading wow fadeInDown">My Work</div>
+   <div class="skills-heading wow fadeInDown">My Work / Projects</div>
+        <div class="main-heading wow lightSpeedIn text-center">To check each project or to contribute to it, click on the image which will take you to its respective codebase.</div>
           <div class="projects" id="projects">
               <div class="container">
                 <div class="row">
                   <div class="col">
-                    <a href="https://play.google.com/store/apps/details?id=in.selvasoft.beats">
+                    <a href="https://github.com/PrachetShah/Prachet-Blog">
                     <div class="portfolio-code wow bounceInUp">
-                   <img src="img/beats.png" class="code-work-img">
-                   <div class="project_heading-code">Beats</div>
-                   <p class="code-stuff">Beats is a materialistic , minimal music player built in Flutter and has over 3k+ downloads!</p>
-                </div>
+                   <img src="img/blog.png" class="code-work-img" height="200" width="200">
+                   <div class="project_heading-code">Flask BlogPage - Web Dev</div>
+                   <p class="code-stuff">It is a Blog Site created using Python Flask Framework. Some of its features include: Secure Authentiation, Comments, Admin only Changes which is hosted on Heroku WSGI Gunicorn Server.</p>
+                  </div>
               </a>
+                  </div>
+
+                  <div class="col">
+                    <a href="https://github.com/PrachetShah/Regression-Models">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/salary.png" height="200" width="200">
+                        <div class="project_heading-code">Salary Prediction using Regression Models - ML</div>
+                        <p class="code-stuff">Predicting Salary of different positions in a company using Machine Learning, specifically Regression Models.</p>
+                      </div>
+                    </a>
+                  </div>
+
+                  <div class="col">
+                    <a href="https://github.com/PrachetShah/Data-Science/blob/main/Predicting%20House%20Prices/Multivariable_Regression_and_Valuation_Model.ipynb">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/house_prices.png" height="200" width="200" class="ps-4">
+                        <div class="project_heading-code">Predicting House Prices with Seaborn - Data Science</div>
+                        <p class="code-stuff">Predicting House prices using Data Exploration Techniques and Advanced Visualization using Plotly and Seaborn.</p>
+                      </div>
+                    </a>
+                  </div>
+
+                  <div class="col">
+                    <a href="https://github.com/PrachetShah/Classification-Models">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/classification.png" height="200" width="200" class="text-center">
+                        <div class="project_heading-code">Ads Campaign Response Classification - ML</div>
+                        <p class="code-stuff">This is a Machine Learning Model which classifies response from users based on factors like age and salary of that person to classify its response: whether he will click on targeted Ad or not.</p>
+                      </div>
+                    </a>
+                  </div>
+
+                  <div class="col">
+                    <a href="https://github.com/PrachetShah/Creamy">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/ice-cream-van.png" height="200" width="200">
+                        <div class="project_heading-code">Creamy - Web Dev</div>
+                        <p class="code-stuff">Creamy simple is a webapp created using Django Framework for an imaginary Ice Cream Company.</p>
+                      </div>
+                    </a>
+                  </div>
+
+                  <div class="col">
+                    <a href="https://github.com/PrachetShah/Dojo-Blog">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/dojo.png" height="200" width="200">
+                        <div class="project_heading-code">Dojo Blog - Web Dev</div>
+                        <p class="code-stuff">Dojo Blog is a Simple Blog Page which is developed for understanding and practise my React Skills.</p>
+                      </div>
+                    </a>
+                  </div>
+
+                  <div class="col text-center">
+                    <a href="https://github.com/PrachetShah/ML-Association-Rule-Learning">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/market-trends.png" height="200" width="200">
+                        <div class="project_heading-code">Market Basket Optimisation - ML</div>
+                        <p class="code-stuff">Assosiation Rule Learning using <strong>Apriori</strong> and <strong>Eclat</strong> Algorithms for Market Basket Optimisation to segregate contents in a store based on user purchases.</p>
+                      </div>
+                    </a>
+                  </div>
+
+                  <!-- <div class="col">
+                    <a href="https://play.google.com/store/apps/details?id=com.tecmpvbr9">
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/halo.png" height="200" width="200">
+                        <div class="project_heading-code">Halo!</div>
+                        <p class="code-stuff">Halo! is a Netflix like streaming app to stream movies and series for free! It is a complete netflix clone and has over 100k+ downloads!</p>
+                      </div>
+                    </a>
                   </div>
 
                   <div class="col">
                     <a href="https://play.google.com/store/apps/details?id=com.tecmpvbr9">
-                    <div class="portfolio-code wow bounceInUp">
-                   <img src="img/halo.png" height="200" width="200">
-                   <div class="project_heading-code">Halo!</div>
-                   <p class="code-stuff">Halo! is a Netflix like streaming app to stream movies and series for free! It is a complete netflix clone and has over 100k+ downloads!</p>
-                </div>
-              </a>
-                  </div>
-
-                  <div class="col">
-                    <a href="https://github.com/OjasKarmarkar/Apli">
-                    <div class="portfolio-code wow bounceInUp">
-                   <img src="img/flutter.png" >
-                   <div class="project_heading-code">Login App</div>
-                  <p class="code-stuff">It is a template that I made for usual login , signup and to fill information using a form!</p>
-                </div>
-                </a>
-                  </div>
+                      <div class="portfolio-code wow bounceInUp">
+                        <img src="img/halo.png" height="200" width="200">
+                        <div class="project_heading-code">Halo!</div>
+                        <p class="code-stuff">Halo! is a Netflix like streaming app to stream movies and series for free! It is a complete netflix clone and has over 100k+ downloads!</p>
+                      </div>
+                    </a>
+                  </div> -->
 
                   <div class="w-100"></div>
+                  
     </div>
     </div>
 
@@ -119,7 +181,7 @@
               <div class="feature_item wow zoomIn">
                <a href="">
                 <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-pen-nib"></i>
-                <h4>App Design</h4>
+                <h4>Design</h4>
                 <p>If you have a design in mind , I can suggest you better ideas always!
                     Otherwise I can always design your app in Figma!</p>
               </div></a>
@@ -129,8 +191,8 @@
               <a href="">
                  <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-code"></i>
                 
-                <h4>App Development</h4>
-                <p>Nothing is more important than transforming app design into an actual app!
+                <h4>Development</h4>
+                <p>Nothing is more important than transforming design into an actual application or model!
 
                     After designing , Its developing time! </p>
               </div></a>
@@ -139,19 +201,19 @@
               <div class="feature_item wow zoomIn">
                <a href="">
                 <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-chart-line"></i>
-                <h4>App Publishing</h4>
+                <h4>Deployment</h4>
                 <p>
 
                     After developing , its time for publishing!
 
-                   I will upload the app to the play store , and make it reach to the audiences</p>
+                   I will upload the web app or models online, and make it reach to greater audiences.</p>
               </div></a>
             </div>
           </div>
         </div>
       </section>
 
-    <div class="just-random-section">
+    <!-- <div class="just-random-section">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6">
@@ -164,7 +226,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="just-random-section-2"  style="background-color: #000;color:#fff;">
         <div class="container">
@@ -185,12 +247,12 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active text-center p-4">
                             <div class="client-words">
-                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs an app! Thanks!!!" </p>
+                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs an Data Exploration work done! Thanks!!!" </p>
                             </div>
                         </div>
                         <div class="carousel-item text-center p-4">
                             <div class="client-words">
-                                <p class="para-random-section">"Couldnt have found any better person to make an app for my needs!" </p>
+                                <p class="para-random-section">"Couldnt have found any better person to make an web-app for my needs!" </p>
                             </div>
                         </div>
                     </div>
@@ -233,14 +295,13 @@
                             <h2 class="title-heading">Location Independent App Developer</h2>
                             <ul class="skills-list" style="padding-left: 0px;">
                                 <li><i class="fas fa-check"></i>  I Create Things With ❤️</li>
-                                <li><i class="fas fa-check"></i>  Marketing On Playstore 📈</li>
                                 <li><i class="fas fa-check"></i>  Design And Development 🎨</li>
                                 <li><i class="fas fa-check"></i>  Optimized App</li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-3">
                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
-                                <li>ojask2002@gmail.com</li>
+                                <li>prachetshah25@gmail.com</li>
                                 <a href="index.html"><li>Home</li></a>
                                 <a href="about.html"><li>About Me</li></a>
                                 <a href=""><li>Privacy Policy</li></a>
@@ -248,9 +309,9 @@
                         </div>
                         <div class="col-12 col-md-2">
                             <div class="social" style="padding-left: 0px;margin-top: 5rem;">
-                                <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
-                                <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="mailto:ojask2002@gmail.com"><i class="fas fa-envelope"></i></a>
+                                <a href="https://github.com/PrachetShah" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://www.instagram.com/prachetshah/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="mailto:prachetshah25@gmail.com"><i class="fas fa-envelope"></i></a>
                             </div>
                         </div>
                     </div>
