--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <p class="para-random-section wow rubberBand">Lets talk about your next project , describe your budget and the idea in a few words! </p>
                     </div>
                     <div class="col-12 col-md-6" style="margin-left:4rem;text-align: left;max-width:40%">
-                        <form action="mailto:ojask2002@gmail.com" method="post" enctype="text/plain">
+                        <form action="mailto:prachetshah25@gmail.com" method="post" enctype="text/plain">
                             <div class="form-group">
                               <label for="exampleInputEmail1" class="wow rubberBand">Email address</label>
                               <input type="email" class="form-control wow rubberBand" id="exampleInputEmail1" aria-describedby="emailHelp">
