Intro Section changed

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                         <img src="img/programmer.png" alt="" srcset="" class="illust-main">
                     </div>
                     <div class="text-section">
-                        <h1 class="main-heading wow lightSpeedIn">Python, Web Developer</h1>
+                        <h1 class="main-heading wow lightSpeedIn">Software Developer</h1>
                         <p class="main-para wow lightSpeedIn">
-                          Hey, I am Prachet and I am a Developer with expertise in Python Programming Language and its sub-domains 
-                          like Data Science, Web Automation, Web Scraping, GUI, Backend Development with Flask, Django and I also 
-                          seem to have in depth knowledge on Web Development Frameworks and libraries like React, Tailwind, Semantic UI.
-                          I have also worked with C and C++.                          
+                          Hello, my name is Prachet Shah and I am currently pusrsuing Bachelor's in Technology specialising in Computer Science and Engineering(Data Science) from DJSCE.
+                          Throughout my professional journey, I have gained experience working in programming languages like Python, C++, Javascript and their related frameworks like Flask, Django, Node for Backend and React for Frontend.
+                          I have also worked on both SQL and NoSQL Databases and have a keen interest in Data Science Technologies. I have created various projects utilising libraries like scikit-learn, tensorflow, OpenCV, and PySpark.
+                          Cloud Computing excited me and I have done various courses and certifications in both AWS and Azure.                                                   
                         </p>
                         <p class="main-para wow lightSpeedIn">
                           🕹 As a location independent Developer, I am working with customers all over the globe. 🌎 
